01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-ingestion
  labels:
    name: data-ingestion
    purpose: data-pipeline
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
