batch-01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: batch-analytics
  labels:
    name: batch-analytics
    purpose: batch-processing
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
