task7-kafka-connect-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-connect
  namespace: data-ingestion
  labels:
    app: kafka-connect
    component: service
spec:
  type: ClusterIP
  selector:
    app: kafka-connect
    component: worker
  ports:
  - name: http
    protocol: TCP
    port: 8083
    targetPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-connect-nodeport
  namespace: data-ingestion
  labels:
    app: kafka-connect
    component: external-service
spec:
  type: NodePort
  selector:
    app: kafka-connect
    component: worker
  ports:
  - name: http
    port: 8083
    targetPort: 8083
    nodePort: 30083
    protocol: TCP
